# lab2Cpp-4-sem-

./: CMakeLists.txt
include/functions/: header.h
src/: main.cc
